<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MonthlyLeaderBoardActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_leader_board">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:text="Time remaining"
            >

        </TextView>

        <TextView
            android:id="@+id/myTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="35dp">
        </TextView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/myTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="#1973ff"
            android:textSize="30sp"
            >

        </TextView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="11dp"
            android:background="#CED4DF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/rounded_logo"
                app:civ_border_color="#FF5794D5"
                app:civ_border_width="2dp"
                android:gravity ="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/topText1"
                android:layout_width="175dp"
                android:layout_height="40dp"
                android:text=""
                android:paddingStart="25dp"
                android:textAllCaps="false"
                android:layout_marginStart="15dp"
                android:textColor="#1973ff"
                android:gravity="start|center_vertical"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/top1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_button_lb"
                android:gravity="start|center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/view_more"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="11sp" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="11dp"
            android:background="#CED4DF" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/rounded_logo"
                app:civ_border_color="#FF5794D5"
                app:civ_border_width="2dp"
                android:gravity ="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/topText2"
                android:layout_width="175dp"
                android:layout_height="40dp"
                android:text=""
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textAllCaps="false"
                android:layout_marginStart="15dp"
                android:textColor="#1973ff"
                android:gravity="start|center_vertical"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/top2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_button_lb"
                android:gravity="start|center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/view_more"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="11sp"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="11dp"
            android:background="#CED4DF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/rounded_logo"
                app:civ_border_color="#FF5794D5"
                app:civ_border_width="2dp"
                android:gravity ="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/topText3"
                android:layout_width="175dp"
                android:layout_height="40dp"
                android:text=""
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textAllCaps="false"
                android:layout_marginStart="15dp"
                android:textColor="#1973ff"
                android:gravity="start|center_vertical"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/top3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_button_lb"
                android:gravity="start|center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/view_more"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="11sp"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="11dp"
            android:background="#CED4DF" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/rounded_logo"
                app:civ_border_color="#FF5794D5"
                app:civ_border_width="2dp"
                android:gravity ="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/topText4"
                android:layout_width="175dp"
                android:layout_height="40dp"
                android:text=""
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textAllCaps="false"
                android:layout_marginStart="15dp"
                android:textColor="#1973ff"
                android:gravity="start|center_vertical"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/top4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_button_lb"
                android:gravity="start|center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/view_more"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="11sp"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="11dp"
            android:background="#CED4DF"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/rounded_logo"
                app:civ_border_color="#FF5794D5"
                app:civ_border_width="2dp"
                android:gravity ="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/topText5"
                android:layout_width="175dp"
                android:layout_height="40dp"
                android:text=""
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textAllCaps="false"
                android:layout_marginStart="15dp"
                android:textColor="#1973ff"
                android:gravity="start|center_vertical"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/top5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_button_lb"
                android:gravity="start|center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/view_more"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="11sp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="11dp"
            android:background="#CED4DF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginStart="125dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/todayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#1973ff"
                android:text="Today"
                android:textColor="@color/white"
                >
            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/monthBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#1973ff"
                android:text="Back"
                android:textColor="@color/white"
                >
            </androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>